普通に読めよを追記

--- a/assets/vuetify/variables.scss
+++ b/assets/vuetify/variables.scss
@@ -2,3 +2,5 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+$body-font-family: 'Noto Sans JP', 'Noto Sans Japanese', 'Noto Sans CJK JP',
+'Source Sans Pro', sans-serif;
