--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -11,3 +11,12 @@ $noto-font: 'Noto Sans JP', 'Noto Sans Japanese', 'Noto Sans CJK JP',
   'Source Sans Pro', sans-serif;
 $font-regular: 400;
 $font-bold: 700;
+
+//animation
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
